[project]
name = "ipforms"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "returns>=0.22.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
